# tray-item-rs

./: Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: rust.yml
examples/: linux.rs  macos.rs  windows.rs
examples/linux-edit-menu-items/: Cargo.toml
examples/linux-edit-menu-items/src/: main.rs
examples/linux-embeded-icon/: Cargo.toml
examples/linux-embeded-icon/src/: main.rs
examples/linux-gresources/: Cargo.toml  build.rs
examples/linux-gresources/resources/: tray-icon.xml
examples/linux-gresources/src/: main.rs
examples/linux-named-resource/: Cargo.toml
examples/linux-named-resource/src/: main.rs
examples/windows/: Cargo.toml  build.rs  tray-example.rc
examples/windows-edit-menu-items/: Cargo.toml  build.rs  tray-example.rc
examples/windows-edit-menu-items/src/: main.rs
examples/windows/src/: main.rs
src/: error.rs  lib.rs  linux.rs  macos.rs  windows.rs
src/api/: linux.rs  macos.rs  mod.rs
src/api/linux/: mod.rs
src/api/linux_ksni/: mod.rs
src/api/linux_libappindicator/: mod.rs
src/api/macos/: callback.rs  mod.rs
src/api/windows/: funcs.rs  mod.rs  structs.rs
tools/: build-linux.sh  build-macos.sh  build-windows.sh  linux-build-container.sh  windows-build-container.sh
