[package]
name = "tray-item"
version = "0.3.0-alpha"
authors = ["Edwin Svensson <trayitemrs@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="linux")'.dependencies]
libappindicator = "0.5" # Tray icon
gtk = "0.8"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "libloaderapi", "errhandlingapi", "impl-default"] }
libc = "0.2"
padlock = "0.2"
# winrt = { git = "https://github.com/microsoft/winrt-rs" } # No crosss compilation available

[target.'cfg(target_os="macos")'.dependencies]
# macos
