[package]
name = "tray-item"
version = "0.10.0"
authors = ["Edwin Svensson <trayitemrs@olback.net>"]
edition = "2021"
description = "Super simple API to make tray icons/menus on Windows, Mac & Linux"
homepage = "https://github.com/olback/tray-item-rs"
repository = "https://github.com/olback/tray-item-rs"
readme = "README.md"
keywords = ["gui", "tray", "desktop", "tray-item"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
ksni = ["dep:ksni"]
libappindicator = ["dep:libappindicator", "dep:gtk"]

[dependencies]
ksni = { version = "0.2.0", optional = true }
libappindicator = { version = "0.9", optional = true } # Tray icon
gtk = { version = "0.18", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
padlock = "0.2"

[target.'cfg(target_os="windows")'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-graphics = "0.23"
objc-foundation = "0.1"
objc_id = "0.1"
libc = "0.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
incremental = false
codegen-units = 1
panic = "abort"
